--- a/_sass/world/2025/base/_colors.scss
+++ b/_sass/world/2025/base/_colors.scss
@@ -5,6 +5,8 @@ $pink: #FF18A2;
 
 // Gradients
 $button-gradient: linear-gradient(90deg, #3B1D62 47%, $red 100%);
+$button-secondary-gradient: linear-gradient(270deg, $dark-purple 17%, $red 100%);
+
 $speaker-card-gradient: linear-gradient(180deg, rgba(59, 29, 98, 0%) 50%, $red 100%);
 $speaker-card-gradient-hover: linear-gradient(180deg, rgba(59, 29, 98, 0%) 0%, rgba(203, 12, 28, 50%) 31%, $red 100%);;
 $purple-gradient: linear-gradient(180deg, $dark-purple, $dark-purple, $fushia, $fushia);
