--- a/_sass/world/2025/common/_button.scss
+++ b/_sass/world/2025/common/_button.scss
@@ -1,21 +1,36 @@
-.button-primary {
+@mixin gradient-border($gradient, $thickness: 2px) {
+  content: '';
+  position: absolute;
+  inset: 0;
+  padding: $thickness;
+  border-radius: inherit;
+  background: $gradient;
+  mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  mask-composite: exclude;
+  -webkit-mask-composite: xor;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+@mixin button-base {
   display: inline-block;
+  position: relative;
   width: fit-content;
-  text-decoration: none;
-  cursor: pointer;
   padding: 20px 40px;
   border-radius: 10px;
-  position: relative;
-  transition: all 0.5s ease-in-out;
+  text-decoration: none;
+  cursor: pointer;
   z-index: 1;
+  transition: all 0.5s ease-in-out;
+
+  @include media(MobileScreens) {
+    padding: 15px 20px;
+  }
 
   span {
     font-size: $xx-large;
     font-variation-settings: $font-weight-700;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-image: $button-gradient;
     position: relative;
     z-index: 2;
 
@@ -24,31 +39,15 @@
     }
   }
 
-  // For the gradient border on hover
   &:before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    border-radius: inherit;
-    padding: 2px; // border thickness
-
-    // transparent background
-    background: $fushia-to-red-gradient;
-    mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-    -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-    mask-composite: exclude;
-    -webkit-mask-composite: xor;
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+    @include gradient-border($button-gradient);
   }
 
-  // For the gradient background
   &:after {
     content: '';
     position: absolute;
     inset: 0;
     border-radius: inherit;
-    background: white;
     z-index: 1;
     transition: background 0.5s ease-in-out;
   }
@@ -56,7 +55,28 @@
   &:hover {
     &:before { opacity: 1; }
     &:after { background: none; }
+  }
+}
 
+.button-primary {
+  @include button-base;
+
+  span {
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: $button-gradient;
+  }
+
+  &:before {
+    @include gradient-border($fushia-to-red-gradient);
+  }
+
+  &:after {
+    background: white;
+  }
+
+  &:hover {
     span {
       color: white;
       background: none;
@@ -65,71 +85,28 @@
       -webkit-text-fill-color: initial;
     }
   }
-
-  @include media(MobileScreens) {
-    padding: 15px 20px;
-  }
 }
 
 .button-secondary {
-  display: inline-block;
-  position: relative;
-  width: fit-content;
-  border-radius: 10px;
-  padding: 20px 40px;
-  text-decoration: none;
-  cursor: pointer;
-  z-index: 1;
-  transition: all 0.5s ease-in-out;
+  @include button-base;
 
   span {
-    font-size: $xx-large;
-    font-variation-settings: $font-weight-700;
     color: white;
-    position: relative;
-    z-index: 2;
-
-    @include media(MobileScreens) {
-      font-size: $medium;
-    }
   }
 
-  // For the gradient border on hover
   &:before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    border-radius: inherit;
-    padding: 2px; // border thickness
-
-    // transparent background
-    background: $button-secondary-gradient;
-    mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-    -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-    mask-composite: exclude;
-    -webkit-mask-composite: xor;
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+    @include gradient-border($button-secondary-gradient);
   }
 
-  // For the gradient background
   &:after {
-    content: '';
-    position: absolute;
-    inset: 0;
-    border-radius: inherit;
-    border: 2px solid $red;
     background: $button-secondary-gradient;
-    z-index: 1;
-    transition: background 0.5s ease-in-out;
+    border: 2px solid $red;
   }
 
   &:hover {
-    &:before { opacity: 1; }
-    &:after { background: none; border: none;}
-  }
-
-  @include media(MobileScreens) {
-    padding: 15px 20px;
+    &:after {
+      background: none;
+      border: none;
+    }
   }
 }
