--- a/_sass/world/2025/base/_layout.scss
+++ b/_sass/world/2025/base/_layout.scss
@@ -23,6 +23,8 @@ body {
 .section {
   margin: 50px 0;
 
+  @include media(MobileScreens) { margin: 10px 0; }
+
   h2, h3 {
     margin-bottom: 35px;
   }
@@ -47,6 +49,12 @@ body {
   gap: 50px;
   text-align: left;
 
+  p {
+    width: 75%;
+
+    @include media(MobileScreens) { width: 100%; }
+  }
+
   @include media(MobileScreens) {
     width: 100%;
     gap: 30px;
@@ -60,7 +68,7 @@ body {
   align-items: center;
 
   .illustration {
-    width: 700px;
+    width: 900px;
 
     @include media(MobileScreens) {
       display: none;
