--- a/_sass/world/2025/modules/_announcement_banner.scss
+++ b/_sass/world/2025/modules/_announcement_banner.scss
@@ -15,10 +15,12 @@
     justify-content: center;
 
     p {
-      font-size: $medium;
+      font-size: $large;
       text-align: center;
       color: white;
       font-variation-settings: $font-weight-900;
+
+      @include media(MobileScreens) { font-size: $medium; }
     }
   }
 }
