--- a/_sass/world/2025/modules/_homepage.scss
+++ b/_sass/world/2025/modules/_homepage.scss
@@ -13,7 +13,7 @@
   }
 
   .text-container {
-    width: 50%;
+    width: 65%;
 
     @include media(MobileScreens) {
       width: 100%;
@@ -21,8 +21,8 @@
   }
 
   .content-right {
-    margin-top: 50px;
-    margin-left: 40%;
+    margin-top: 80px;
+    margin-left: 45%;
 
     @include media(MobileScreens){
       margin: 0;
@@ -43,9 +43,10 @@
   gap: 20px;
   margin: 80px 0;
 
-  @include media(MobileScreens) {
+  @include media(TabletScreens) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
     column-gap: 0;
   }
 }
