--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://rubyonrails.org/2025/3/7/apply-to-speak-at-rails-world-2025" target="_blank">
-      [Rails World 2025] CFP is now open - submit by April 10
+    <a class="common-button--text" href="https://rubyonrails.org/world/2025" target="_blank">
+      [Rails World 2025] Tickets sales coming soon
     </a>
   </p>
 </div>
