work on responsiveness

--- a/_includes/world/2025/homepage_sections/hero_banner.html
+++ b/_includes/world/2025/homepage_sections/hero_banner.html
@@ -1,25 +1,32 @@
 <div class="hero-banner">
-  <div class="polygon-top-left">
-    <div class="polygon-frame">
-      <img src="/assets/world/2025/images/placeholder.png" alt="Rails World 2025 Square Logo" />
+  <div class="floating-polygons-container left-side">
+    <div class="polygon-top-left">
+      <div class="polygon-frame">
+        <img src="/assets/world/2025/images/placeholder.png" alt="Top left polygon" />
+      </div>
     </div>
-  </div>
-  <div class="polygon-top-right">
-    <div class="polygon-frame">
-      <img src="/assets/world/2025/images/placeholder.png" alt="Rails World 2025 Square Logo" />
-    </div>
-  </div>
-  <div class="polygon-bottom-left">
-    <div class="polygon-frame">
-      <img src="/assets/world/2025/images/placeholder.png" alt="Rails World 2025 Square Logo" />
-    </div>
-  </div>
-  <div class="polygon-bottom-right">
-    <div class="polygon-frame">
-      <img src="/assets/world/2025/images/placeholder.png" alt="Rails World 2025 Square Logo" />
+    <div class="polygon-bottom-left">
+      <div class="polygon-frame">
+        <img src="/assets/world/2025/images/placeholder.png" alt="Bottom left polygon" />
+      </div>
     </div>
   </div>
 
-  <img src="/assets/world/2025/logos/RW25_logo-white-square-dated.png" alt="Rails World 2025 Square Logo" id="logo-world-2025"/>
-  <a href="" class="button-primary"><span>Tickets coming soon!</span></a>
+  <div class="logo-container">
+    <img src="/assets/world/2025/logos/RW25_logo-white-square-dated.png" alt="Rails World 2025 Logo" id="logo-world-2025" />
+    <a href="" class="button-primary"><span>Tickets coming soon!</span></a>
+  </div>
+
+  <div class="floating-polygons-container right-side">
+    <div class="polygon-top-right">
+      <div class="polygon-frame">
+        <img src="/assets/world/2025/images/placeholder.png" alt="Top right polygon" />
+      </div>
+    </div>
+    <div class="polygon-bottom-right">
+      <div class="polygon-frame">
+        <img src="/assets/world/2025/images/placeholder.png" alt="Bottom right polygon" />
+      </div>
+    </div>
+  </div>
 </div>
