--- a/_includes/world/2025/homepage_sections/intro.html
+++ b/_includes/world/2025/homepage_sections/intro.html
@@ -1,11 +1,13 @@
-<div class="section text-with-image-container">
-  <div class="text-container">
-    <h1>Shaping the future of Ruby on Rails</h1>
-    <p class="larger">
-      <span class="bold">Rails World </span>is a two-day, two track community conference featuring <span class="bold">technical talks, demos, networking,
-      and keynotes</span> abnout the latest features and best practices in Rails development. 
-    </p>
-    <a href="" class="button-primary"><span>See full programme</span></a>
+<div class="section full-height">
+  <div class="intro-container">
+    <div class="content">
+      <h1>Shaping the future of Ruby on Rails</h1>
+      <p class="larger">
+        <span class="bold">Rails World </span>is a two-day, two track community conference featuring <span class="bold">technical talks, demos, networking,
+        and keynotes</span> abnout the latest features and best practices in Rails development. 
+      </p>
+      <a href="" class="button-primary"><span>See full programme</span></a>
+    </div>
+    <img src="/assets/world/2025/images/image_with_shape.png" alt="attendees at the rails conf" class="illustration" />
   </div>
-  <img src="/assets/world/2025/images/image_with_shape.png" alt="attendees at the rails conf" class="illustration"/>
 </div>
