--- a/_includes/world/2025/homepage_sections/image_carousel.html
+++ b/_includes/world/2025/homepage_sections/image_carousel.html
@@ -1,4 +1,4 @@
-<div class="carousel-container">
+<div class="section carousel-container">
   <div class="scroll-carousel">
     <img src="/assets/world/2025/images/carousel/carousel1.png" alt="Image 1" />
     <img src="/assets/world/2025/images/carousel/carousel2.png" alt="Image 1" />
