--- a/_includes/world/2025/homepage_sections/sponsors.html
+++ b/_includes/world/2025/homepage_sections/sponsors.html
@@ -1,19 +1,21 @@
-<div class="section full-height sponsor-intro-container">
-  <h2 class="large-title">Sponsor Rails World</h2>
+<div class="section full-height">
+  <div class="sponsor-intro-container">
+    <h2 class="large-title">Sponsor Rails World</h2>
 
-  <div class="content">
-    <div></div>
-    <div>
-      <p class="larger">
-        Sponsoring Rails World means showcasing your brand to a  <span class="bold">global audience of Rails enthusiasts</span>, developers, and industry leaders.
-        Let's make Rails World an unforgettable experience for all.
-      </p>
-      <a href="https://public.3.basecamp.com/p/KZTZxpc6BVtMSH9Vv4PWAMN9" class="button-secondary" target="_blank"><span>View prospectus</span></a>
+    <div class="content">
+      <div></div>
+      <div>
+        <p class="larger">
+          Sponsoring Rails World means showcasing your brand to a  <span class="bold">global audience of Rails enthusiasts</span>, developers, and industry leaders.
+          Let's make Rails World an unforgettable experience for all.
+        </p>
+        <a href="https://public.3.basecamp.com/p/KZTZxpc6BVtMSH9Vv4PWAMN9" class="button-secondary" target="_blank"><span>View prospectus</span></a>
+      </div>
     </div>
   </div>
 </div>
 
-<div class="section full-height">
+<div class="section">
   <div class="logos-grid platinum">
     {% for sponsor in site.data.world['2025'].sponsors.platinum %}
       <a href="{{ sponsor.url }}">
