--- a/_sass/world/2025/modules/_homepage.scss
+++ b/_sass/world/2025/modules/_homepage.scss
@@ -4,16 +4,26 @@
   justify-content: space-between;
   align-items: center;
 
+  @include media(MobileAndTabletScreens) {
+    flex-direction: column-reverse;
+    padding-left: 20px;
+  }
+
+  @include media(MobileScreens) {
+    justify-content: center;
+  }
+
   .illustration {
     height: 100%;
 
     @include media(MobileScreens) {
-      display: none;
+      height: 32%;
     }
-  }
 
-  @include media(MobileScreens) {
-    padding: 0 20px;
+    @include media(TabletScreens) {
+      align-self: flex-end;
+      height: 60%;
+    }
   }
 
   .content {
@@ -23,15 +33,15 @@
     gap: 50px;
     text-align: left;
 
-    p {
-      width: 75%;
-
-      @include media(MobileScreens) { width: 100%; }
-    }
-
     @include media(MobileScreens) {
       width: 100%;
-      gap: 30px;
+      margin-top: 50px;
+    }
+
+    @include media(TabletScreens) {
+      width: 75%;
+      align-self: flex-start;
+      padding-left: 80px;
     }
   }
 }
@@ -40,12 +50,20 @@
   background-image: url("/assets/world/2025/images/shape.png");
   background-repeat: no-repeat;
 
+  @include media(MobileScreens) {
+    background-image: none;
+  }
+
   h2 {
     text-align: left;
     padding: 100px 0 0 80px;
 
     @include media(MobileScreens) {
-      padding: 0;
+      background-image: url("/assets/world/2025/images/shape.png");
+      height: 50%;
+      background-size: contain;
+      background-repeat: no-repeat;
+      padding: 20px 0 0 20px;
     }
   }
 
@@ -56,13 +74,11 @@
     grid-template-columns: repeat(2,1fr);
     padding: 50px 100px;
 
-
     @include media(MobileScreens) {
       display: flex;
       flex-direction: column;
       justify-content: center;
       padding: 0 20px;
-      width: 100%;
     }
   }
 }
@@ -71,12 +87,18 @@
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin: 80px 0;
+  margin: 150px 0 80px 0;
+
+  @include media(MobileScreens) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
 
   @include media(TabletScreens) {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     justify-items: center;
     column-gap: 0;
+    row-gap: 50px;
   }
 }
