--- a/_includes/world/2025/homepage_sections/sponsors.html
+++ b/_includes/world/2025/homepage_sections/sponsors.html
@@ -1,4 +1,4 @@
-<div class="section full-height">
+<div class="section full-height mobile-fit-content">
   <div class="sponsor-intro-container">
     <h2 class="large-title">Sponsor Rails World</h2>
 
