--- a/_includes/world/2025/homepage_sections/intro.html
+++ b/_includes/world/2025/homepage_sections/intro.html
@@ -1,4 +1,4 @@
-<div class="section full-height">
+<div class="section full-height mobile-fit-content">
   <div class="intro-container">
     <div class="content">
       <h1>Shaping the future of Ruby on Rails</h1>
@@ -8,6 +8,9 @@
       </p>
       <a href="" class="button-primary"><span>See full programme</span></a>
     </div>
-    <img src="/assets/world/2025/images/image_with_shape.png" alt="attendees at the rails conf" class="illustration" />
+
+    <div class="illustration-container">
+      <img src="/assets/world/2025/images/image_with_shape.png" alt="attendees at the rails conf" class="illustration" />
+    </div>
   </div>
 </div>
