--- a/_sass/world/2025/modules/_image_carousel.scss
+++ b/_sass/world/2025/modules/_image_carousel.scss
@@ -4,6 +4,10 @@
   height: 80vh;
   display: flex;
   align-items: center;
+
+  @include media(MobileScreens) {
+    height: 50vh;
+  }
 }
 
 .scroll-carousel {
@@ -16,6 +20,10 @@
   scroll-behavior: smooth;
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE/Edge */
+
+  @include media(MobileScreens) {
+    height: 50vh;
+  }
 }
 
 .scroll-carousel::-webkit-scrollbar {
