--- a/_sass/world/2025/common/_button.scss
+++ b/_sass/world/2025/common/_button.scss
@@ -37,6 +37,10 @@
     @include media(MobileScreens) {
       font-size: $medium;
     }
+
+    @include media(TabletScreens) {
+      font-size: $x-large;
+    }
   }
 
   &:before {
