--- a/_sass/world/2025/modules/_homepage.scss
+++ b/_sass/world/2025/modules/_homepage.scss
@@ -23,6 +23,10 @@
 
   .illustration {
     height: 100%;
+
+    @include media(TabletScreens) {
+      height: 50vh;
+    }
   }
 
   .content {
@@ -41,6 +45,7 @@
       width: 75%;
       align-self: flex-start;
       padding-left: 80px;
+      margin-top: 50px;
     }
   }
 }
@@ -81,6 +86,11 @@
       flex-direction: column;
       justify-content: center;
       padding: 0 20px;
+    }
+
+    @include media(TabletScreens) {
+      display: block;
+      padding: 50px 80px;
     }
   }
 }
