--- a/_sass/world/2025/modules/_image_carousel.scss
+++ b/_sass/world/2025/modules/_image_carousel.scss
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
 
-  @include media(MobileScreens) {
+  @include media(MobileAndTabletScreens) {
     height: 50vh;
   }
 }
@@ -21,7 +21,7 @@
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE/Edge */
 
-  @include media(MobileScreens) {
+  @include media(MobileAndTabletScreens) {
     height: 50vh;
   }
 }
@@ -37,7 +37,7 @@
   pointer-events: none;
   user-select: none;
 
-  @include media(MobileScreens) {
+  @include media(MobileAndTabletScreens) {
     height: 30vh;
   }
 }
