implement feedback on homepage

--- a/_includes/world/2025/components/announcement_banner.html
+++ b/_includes/world/2025/components/announcement_banner.html
@@ -3,7 +3,7 @@
   <div class="announcement-banner {{ include.background_color }}">
     {% for announcement in announcements %}
       <div class="content">
-        <p>{{ announcement.content }}</p>
+        <p>{{ announcement.content | html }}</p>
       </div>
     {% endfor %}
   </div>
