--- a/_includes/world/2025/homepage_sections/intro.html
+++ b/_includes/world/2025/homepage_sections/intro.html
@@ -4,9 +4,9 @@
       <h1>Shaping the future of Ruby on Rails</h1>
       <p class="larger">
         <span class="bold">Rails World </span>is a two-day, two track community conference featuring <span class="bold">technical talks, demos, networking,
-        and keynotes</span> abnout the latest features and best practices in Rails development. 
+        and keynotes</span> about the latest features and best practices in Rails development. 
       </p>
-      <a href="" class="button-primary"><span>See full programme</span></a>
+      <a href="https://maps.app.goo.gl/q1WDbpc42nft5TjLA" class="button-primary" target="_blank"><span>See venue</span></a>
     </div>
 
     <div class="illustration-container">
