--- a/_includes/world/2025/homepage_sections/hero_banner.html
+++ b/_includes/world/2025/homepage_sections/hero_banner.html
@@ -14,7 +14,7 @@
 
   <div class="logo-container">
     <img src="/assets/world/2025/logos/RW25_logo-white-square-dated.png" alt="Rails World 2025 Logo" id="logo-world-2025" />
-    <a href="" class="button-primary"><span>Tickets coming soon!</span></a>
+    <a href="#" class="button-primary disabled"><span>Tickets coming soon!</span></a>
   </div>
 
   <div class="floating-polygons-container right-side">
