--- a/_includes/world/2025/components/navbar.html
+++ b/_includes/world/2025/components/navbar.html
@@ -9,22 +9,21 @@
     </div>
   </nav>
 
-  <nav id="navbar-mobile">
+  <!-- Hide until we have more nav items to show -->
+  <!-- <nav id="navbar-mobile">
     <div class="nav-content">
       <a href="/world/2025" class="logo-container">
         <img alt="Rails World Logo 2025" src="/assets/world/2025/logos/RW25_logo-white-trademark.png" />
       </a>
-      <button class="menu-toggle" aria-label="Toggle Menu">
-        ☰
-      </button>
+      <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
     </div>
 
     <div class="mobile-menu">
-      {% include world/2025/components/navbar_links.html %}
     </div>
-  </nav>
+  </nav> -->
 </header>
 
+<!--
 <script>
   document.addEventListener('DOMContentLoaded', function () {
     const nav = document.querySelector('#navbar-mobile');
@@ -35,4 +34,4 @@
       mobileMenu.classList.toggle('menu-open');
     });
   });
-</script>
+</script> -->
