add back to top button

--- a/assets/css/world-2025.scss
+++ b/assets/css/world-2025.scss
@@ -11,6 +11,7 @@
 
 @import 'world/2025/base/layout';
 
+@import 'world/2025/common/back_to_top';
 @import 'world/2025/common/button';
 @import 'world/2025/common/logos_grid';
 @import 'world/2025/common/polygon_frame';
