update carousel and polygon images

--- a/_includes/world/2025/homepage_sections/hero_banner.html
+++ b/_includes/world/2025/homepage_sections/hero_banner.html
@@ -2,12 +2,12 @@
   <div class="floating-polygons-container left-side">
     <div class="polygon-top-left">
       <div class="polygon-frame">
-        <img src="/assets/world/2025/images/placeholder.png" alt="Top left polygon" />
+        <img src="/assets/world/2025/images/polygones/polygon1.jpg" alt="people attending rails world talk" />
       </div>
     </div>
     <div class="polygon-bottom-left">
       <div class="polygon-frame">
-        <img src="/assets/world/2025/images/placeholder.png" alt="Bottom left polygon" />
+        <img src="/assets/world/2025/images/polygones/polygon2.jpg" alt="rail world booths" />
       </div>
     </div>
   </div>
@@ -20,12 +20,12 @@
   <div class="floating-polygons-container right-side">
     <div class="polygon-top-right">
       <div class="polygon-frame">
-        <img src="/assets/world/2025/images/placeholder.png" alt="Top right polygon" />
+        <img src="/assets/world/2025/images/polygones/polygon3.png" alt="Top right polygon" />
       </div>
     </div>
     <div class="polygon-bottom-right">
       <div class="polygon-frame">
-        <img src="/assets/world/2025/images/placeholder.png" alt="Bottom right polygon" />
+        <img src="/assets/world/2025/images/polygones/polygon4.jpg" alt="people attending rails world talk" />
       </div>
     </div>
   </div>
