--- a/_includes/world/2025/homepage_sections/image_carousel.html
+++ b/_includes/world/2025/homepage_sections/image_carousel.html
@@ -1,10 +1,11 @@
 <div class="section full-height mobile-fit-content">
   <div class="carousel-container">
     <div class="scroll-carousel">
-      <img src="/assets/world/2025/images/carousel/carousel1.png" alt="Image 1" />
-      <img src="/assets/world/2025/images/carousel/carousel2.png" alt="Image 1" />
-      <img src="/assets/world/2025/images/carousel/carousel1.png" alt="Image 1" />
-      <img src="/assets/world/2025/images/carousel/carousel2.png" alt="Image 1" />
+      <img src="/assets/world/2025/images/carousel/carousel1.jpg" alt="people networking" />
+      <img src="/assets/world/2025/images/carousel/carousel2.jpg" alt="talk rails world 2023" />
+      <img src="/assets/world/2025/images/carousel/carousel3.jpg" alt="people applauding at rails world" />
+      <img src="/assets/world/2025/images/carousel/carousel4.jpg" alt="the venue of rails world 2025" />
+      <img src="/assets/world/2025/images/carousel/carousel5.jpg" alt="talk rails world 2023" />
     </div>
   </div>
 </div>
